WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238231
calc(): Handle finite value with infinite step in round()
https://bugs.webkit.org/show_bug.cgi?id=238231
Summary
calc(): Handle finite value with infinite step in round()
Nikos Mouchtaris
Reported
2022-03-22 15:56:02 PDT
Handle finite value with infinite step in round() from css/css-values/round-function.html
Attachments
Patch
(12.59 KB, patch)
2022-03-22 16:01 PDT
,
Nikos Mouchtaris
simon.fraser
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.61 KB, patch)
2022-03-24 14:35 PDT
,
Nikos Mouchtaris
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2022-03-22 16:01:41 PDT
Created
attachment 455445
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-03-24 13:38:54 PDT
Comment on
attachment 455445
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=455445&action=review
> Source/WebCore/css/calc/CSSCalcPrimitiveValueNode.cpp:89 > + m_value = CSSPrimitiveValue::create(signbit(m_value->doubleValue()) ? -std::numeric_limits<double>::infinity() : std::numeric_limits<double>::infinity(), m_value->primitiveType());
can this use copysign()?
Nikos Mouchtaris
Comment 3
2022-03-24 14:35:23 PDT
Created
attachment 455684
[details]
Patch
Nikos Mouchtaris
Comment 4
2022-03-24 17:16:50 PDT
(In reply to Simon Fraser (smfr) from
comment #2
)
> Comment on
attachment 455445
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=455445&action=review
> > > Source/WebCore/css/calc/CSSCalcPrimitiveValueNode.cpp:89 > > + m_value = CSSPrimitiveValue::create(signbit(m_value->doubleValue()) ? -std::numeric_limits<double>::infinity() : std::numeric_limits<double>::infinity(), m_value->primitiveType()); > > can this use copysign()?
Fixed.
EWS
Comment 5
2022-03-24 18:04:21 PDT
Committed
r291841
(
248855@main
): <
https://commits.webkit.org/248855@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455684
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-03-24 18:05:23 PDT
<
rdar://problem/90809047
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug