calc(): Handle finite value with infinite step in round() https://bugs.webkit.org/show_bug.cgi?id=238231

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-values/round-function-expected.txt:

Source/WebCore:

Add handling for finite value with infinite step in round().

* css/calc/CSSCalcOperationNode.cpp:
(WebCore::CSSCalcOperationNode::evaluateOperator):
* css/calc/CSSCalcPrimitiveValueNode.cpp:
(WebCore::CSSCalcPrimitiveValueNode::invert):



Canonical link: https://commits.webkit.org/248855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291841 268f45cc-cd09-0410-ab3c-d52691b4dbfc