Source/WebCore/css/calc/CSSCalcPrimitiveValueNode.cpp
@@ -86,7 +86,7 @@ void CSSCalcPrimitiveValueNode::invert()
 {
     ASSERT(isNumericValue());
     if (!m_value->doubleValue()) {
-        m_value = CSSPrimitiveValue::create(std::numeric_limits<double>::infinity(), m_value->primitiveType());
+        m_value = CSSPrimitiveValue::create(std::copysign(std::numeric_limits<double>::infinity(), m_value->doubleValue()), m_value->primitiveType());
         return;
     }
 
